# ASDM

./: .gitignore  0-Performance_comparison.ipynb  0_test_init.ipynb  1-SD_modelling.ipynb  2-SD_model_calibration.ipynb  3-From_XMILE.ipynb  ASDM.code-workspace  Demo_SD_modelling.ipynb  Documentation.md  LICENSE  Pipfile  README.md  ValidateSimuOutcomes.ipynb  pyproject.toml  requirements.txt  run_tests.py  test_Behaviour.py  test_Engine.py  test_Externals.py  test_expbound.py  test_logisticbound.py  test_structure_analysis.py  test_unary_parsing.py
ASDM/: ASDM.py  Engine.py  EngineNew.py  EngineOOP.py  EngineOOPNewExe.py  EngineV2.py  Functions.py  MCMC.py  Optimizer.py  Parser.py  Parser_SD_formula.py  Parser_XMILE.py  Payoff.py  Probability.py  Read_stmx.py  Solver.py  Utilities.py  asdm.py  test_Engine.py  test_Solver.py
BuiltInTestModels/: Array_cross_reference.stmx  Array_cross_reference_inference.stmx  Array_parallel_reference.stmx  Basic_math.stmx  Built_in_vars.stmx  Conveyor.stmx  Conveyor_initialisation.stmx  Conveyor_leakage.stmx  Conveyor_leakage1.stmx  Delays.stmx  Delays2.stmx  Goal_gap.stmx  Goal_gap_array.stmx  Graph_function.stmx  History.stmx  IF_THEN_ELSE.stmx  INIT.stmx  Isolated_var.stmx  LOOKUP.stmx  Logic.stmx  MOD.stmx  Min_Max.stmx  Modules.stmx  Non-negative_stocks.stmx  Smooth.stmx  Time_related_functions.stmx  Time_unit.stmx  array_SUM.stmx  array_in_function.stmx
Discarded/: Engine.py  EngineArraysTest.ipynb  EngineArraysTest.py  EngineNew1.py  EngineNew2.py  EngineOOP.py  EngineStatic.py  Var.py  sly_example.py
asdm/: ASDM.py  asdm.py  utilities.py
asdm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
demo/: Demo_SD_modelling.ipynb  Demo_stmx_support.ipynb  Model_goal_gap_array.stmx
notebooks/: 0-Performance_comparison.ipynb  2-SD_model_calibration.ipynb  ValidateOutcome.ipynb
test_models/: 2022_07_14 no milk without meat.isdb  2022_07_14 no milk without meat.stmx  Donanemab impact.stmx  Elective Recovery Model flattened.stmx  Elective Recovery Model.csv  Elective Recovery Model.isdb  Elective Recovery Model.itmx  Elective Recovery Model.stmx  Elective Recovery Model.xlsx  Elective Recovery Model_backup.stmx  Elective Recovery Model_renamed.isdb  Elective Recovery Model_renamed.stmx  Endoscopy v3b.isdb  Endoscopy v3b.stmx  Endoscopy v3b.xlsx  MTW pathology v0.3 copy.stmx  MTW pathology v0.3.stmx  TempTest1.stmx  TempTest2.isdb  TempTest2.stmx  ValidationOutcomeSmokingCessation.ipynb  array model 240202.stmx  simple care home model 1.stmx  simple care home model.isdb  simple care home model.stmx  simple_care_home_model.py  smoking_cessation_demo.itmx  smoking_cessation_demo.xlsx  smoking_cessation_demo_asdm.csv  smoking_cessation_demo_comparison.csv
tests/: change_equation.py  debug.py  simulation_timing.py  (+8 more)
(+78 files in other folders)
