[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asdm"
version = "0.2.3"
description = "A Python package for System Dynamics Modeling"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
authors = [
    {name = "Wang Zhao", email = "wzh1895@outlook.com"},
    {name = "Matt Stammers"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "networkx",
    "lxml",
    "beautifulsoup4",
    "scipy"
]

[project.urls]
Homepage = "https://github.com/wzh1895/ASDM"
"Source Code" = "https://github.com/wzh1895/ASDM"
"Matt Stammers's GitHub" = "https://github.com/MattStammers"
